<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#106299"   >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/tv_app_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
        android:textColor="#ffffffff"
        android:textSize="@dimen/font24"
        android:background="@drawable/obwodka_game_napis"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:id="@+id/tv_loading"
        android:layout_marginTop="198dp"
        android:textColor="#ffffffff"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/font18"
        android:letterSpacing="0.2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wait"
        android:id="@+id/tv_wait"
        android:textColor="#ffffffff"
        android:layout_marginTop="242dp"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/font16"
        android:letterSpacing="0.2"
        android:textIsSelectable="false" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_progress"
        android:layout_centerHorizontal="true"
        android:src="@drawable/progress"
        android:focusableInTouchMode="false"
        android:layout_marginTop="270dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:src="@drawable/kulki_widok_menu" />
</RelativeLayout>
